Closed Bug 1268953 Opened 8 years ago Closed 8 years ago

iframe/frame/object load events should not be cancelable

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

(Whiteboard: btpp-active)

Attachments

(1 file)

They're not per spec, at least.
Whiteboard: btpp-active
Attachment #8747197 - Flags: review?(bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/31fdb054878f
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: