Bug 1268953.  The load events we fire on iframe/frame/object (in the document case) should not be cancelable.  r=smaug